# MovementEmbedded

./: .gitignore
MovementAnalisis/: .gitignore  CMakeLists.txt  main.cpp  server.py  unused.txt
MovementAnalisis/lib/: MovementAnalizer.h
MovementAnalisis/src/: HttpRequests.cpp  MovementAnalizer.cpp
MovementAnalysis/: CMakeLists.txt  main.cpp
MovementAnalysis/lib/: HttpRequests.h  MovementAnalyzer.h
MovementAnalysis/src/: MovementAnalyzer.cpp  MovementAnalyzer.cpp.orig
SmartCamApp/SmartCam/: ContentView.swift  DetectionAPIList.swift  DetectionView.swift  LiveView.swift  RequestManager.swift  SmartCamApp.swift
SmartCamApp/SmartCam.xcodeproj/: project.pbxproj
SmartCamApp/SmartCam.xcodeproj/project.xcworkspace/xcuserdata/Jai.xcuserdatad/: UserInterfaceState.xcuserstate
SmartCamApp/SmartCam.xcodeproj/xcuserdata/Jai.xcuserdatad/xcschemes/: xcschememanagement.plist
arduino/: arduino.ino
driver/: configure.ac
driver/include/: gpio.h
driver/lib/: Makefile.am  Makefile.in  gpio.c
driver/src/: Makefile.am  Makefile.in  main.c
webserver/: server.py
