cmake_minimum_required(VERSION 3.17)
project(untitled1)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} ${CURL_INCLUDE_DIR})
set(CMAKE_CXX_STANDARD 14)
set(CURL_LIBRARY "-lcurl")
find_package(CURL REQUIRED)
add_executable(untitled1 main.cpp src/MovementAnalyzer.cpp lib/MovementAnalyzer.h src/HttpRequests.cpp lib/HttpRequests.h)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(untitled1 ${OpenCV_LIBS}  Threads::Threads ${CURL_LIBRARIES})