cmake_minimum_required(VERSION 3.16)
project(detection)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} ${CURL_INCLUDE_DIR})
set(CMAKE_CXX_STANDARD 14)
set(CURL_LIBRARY "-lcurl")
set(GPIO_LIBRARY "-lgpio")
find_package(CURL REQUIRED)
find_library(GPIO_LIB gpio)
add_executable(detection main.cpp src/MovementAnalyzer.cpp lib/MovementAnalyzer.h src/HttpRequests.cpp lib/HttpRequests.h)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(detection ${OpenCV_LIBS}  Threads::Threads ${CURL_LIBRARIES} ${GPIO_LIBRARIES})

install(TARGETS detection DESTINATION bin)
